<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChartsActivity">

    <Button
        android:id="@+id/chartsWeek"
        android:layout_width="48dp"
        android:layout_height="49dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:text="@string/weeks_text"
        app:backgroundTint="#AFB1B3"
        app:layout_constraintStart_toEndOf="@+id/chartsDay"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/chartsDay"
        android:layout_width="48dp"
        android:layout_height="49dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:text="@string/days_text"
        app:backgroundTint="#AFB1B3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/chartsYear"
        android:layout_width="48dp"
        android:layout_height="49dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="40dp"
        android:text="@string/years_text"
        app:backgroundTint="#AFB1B3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/chartsMonth"
        android:layout_width="48dp"
        android:layout_height="49dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="40dp"
        android:text="@string/months_text"
        app:backgroundTint="#AFB1B3"
        app:layout_constraintEnd_toStartOf="@+id/chartsYear"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/back_to_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="20dp"
        android:text="@string/back_text"
        app:backgroundTint="#AFB1B3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/chartsActivityText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/activity_text"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chartsWeek" />


    <TextView
        android:id="@+id/chartsTemperatureText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/temperature_text"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.536"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chartsActivity" />

    <com.jjoe64.graphview.GraphView
        android:id="@+id/chartsActivity"
        android:layout_width="405dp"
        android:layout_height="179dp"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chartsActivityText" />

    <com.jjoe64.graphview.GraphView
        android:id="@+id/chartsTemperature"
        android:layout_width="404dp"
        android:layout_height="177dp"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chartsTemperatureText" />

</androidx.constraintlayout.widget.ConstraintLayout>
